fix route - add overflow card

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,7 +24,7 @@ main {
         color: white;
         height: 100%;
     }
-    &::hover .my-card-body {
+    &:hover .my-card-body {
         display: block;
     }
 }
